--- a/index.html
+++ b/index.html
@@ -11,7 +11,30 @@
 </head>
 <body>
     <!-- header -->
+     <header>
+       <div class="header">
+        <img src="img/Logo.png" alt="logo">
+        <h1 class="logo-text">Toboolist</h1>
+       </div>
+
+
+     </header>
     <!-- main -->
+    <main>
+        <div class="container">
+  
+          <!-- button -->
+          <div class="button-container">
+            <button id="task">Add task</button>
+            <button id="section">Add Section</button>
+          </div>
+
+          <div></div>
+     <main>
+       
+
+        </div>
+     </main>
     <!-- footer -->
 
 </body>
